app/server-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: server-deployment
spec:
  replicas: 3
  selector: 
    matchLabels:
      component: server
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5000"        
        prometheus.io/path: "/metrics"    
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: keyprolabs/server-fib
          ports:
            - containerPort: 5000
