app/client-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: svc-client
spec:
  type: NodePort
  selector:
    component: web
  ports: 
    - port: 3000
      targetPort: 3000
      nodePort: 32747
