app/server-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: server-svc
spec: 
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 5000
      targetPort: 5000
